--- a/ctvrta_lekce/package.json
+++ b/ctvrta_lekce/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "~5.1.0",
     "express": "^4.19.2",
+    "express-session": "~1.17.3",
     "joi": "~17.6.0",
     "mongoose": "^6.13.0"
   }
